--- a/templates/paper.html
+++ b/templates/paper.html
@@ -97,8 +97,8 @@
                     <br>
                     <br>
                     <p class="text-muted mt-2" style="text-align: justify;">
-                        Transfer learning has proven to be a successful technique to train %high-end performing
-                        deep learning models in the domains where little training data is available.
+                        Transfer learning has proven to be a successful technique to train deep learning models in the
+                        domains where little training data is available.
                         The dominant approach is to pretrain a model on a large generic dataset such as ImageNet and
                         finetune its weights on the target domain.
                         However, in the new era of an ever increasing number of massive datasets, \emph{selecting the
@@ -112,7 +112,8 @@
                         As in any search engine that serves information to possibly numerous users, we want the online
                         computation performed by the dataserver to be minimal.
                         The dataserver represents large datasets with a much more compact mixture-of-experts model, and
-                        employs it to perform data search in a series of dataserver-client transactions at a low computational
+                        employs it to perform data search in a series of dataserver-client transactions at a low
+                        computational
                         cost. We show the effectiveness of NDS in various transfer learning scenarios, demonstrating
                         state-of-the-art performance on several target datasets and tasks such as image classification,
                         object detection and instance segmentation. Our Neural Data Server will be made available as a
