--- a/templates/paper.html
+++ b/templates/paper.html
@@ -101,11 +101,10 @@
                         domains where little training data is available.
                         The dominant approach is to pretrain a model on a large generic dataset such as ImageNet and
                         finetune its weights on the target domain.
-                        However, in the new era of an ever increasing number of massive datasets, \emph{selecting the
-                        relevant data for pretraining} is a critical issue.
-                        We introduce Neural Data Server (NDS), a large-scale search engine for finding the most
-                        %relevant labeled data to the target domain.
-                        useful transfer learning data to the target domain.
+                        However, in the new era of an ever increasing number of massive datasets, selecting the
+                        relevant data for pretraining is a critical issue.
+                        We introduce Neural Data Server (NDS), a large-scale search engine for finding the most useful
+                        transfer learning data to the target domain.
                         Our NDS consists of a dataserver which indexes several large popular image datasets, and aims to
                         recommend data to a client, an end-user with a target application with its own small labeled
                         dataset.
