--- a/templates/index.html
+++ b/templates/index.html
@@ -31,19 +31,10 @@
                     <a class="nav-link" href="#home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#abstract">About</a>
+                    <a class="nav-link" href="#dataset">Search Engine</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#dataset">Dataset Registry</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#fast-adapt">Fast Adapt</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#download-subset">Download Subset</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="demo.html">Instructions</a>
+                    <a class="nav-link" href="demo.html">Guide</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contribute.html">Contribute</a>
@@ -95,7 +86,7 @@
                     <h2><span class="font-weight-bold">What is Neural Data Server?</span></h2>
                 </div>
                 <br>
-                <p class="text-muted mt-2" style="text-align: justify;">Transfer learning has proven to be a successful
+                <!-- <p class="text-muted mt-2" style="text-align: justify;">Transfer learning has proven to be a successful
                     way to train high performing
                     deep learning models
                     in various applications for which little labeled data is available. In transfer learning, one
@@ -106,19 +97,33 @@
                     engine that uses A.I. to find the best data to pre-train your deep neural models for your target
                     application. Neural Data Server
                     indexes several popular Machine Learning datasets in its quest to serve optimal data to ML users.
+                </p> -->
+                <p class="text-muted mt-2" style="text-align: justify;">Neural Data Server is a search engine that
+                    uses A.I. to find the best data to pre-train your deep neural models for your target application. In
+                    the new era of ever increasing number of
+                    massive datasets, selecting the relevant pre-training data itself is a critical issue. To address
+                    this, we introduce Neural Data Server, a web search
+                    engine that uses A.I. to find the best data to pre-train your deep neural models for your target
+                    application. Neural Data Server
+                    indexes several popular Machine Learning datasets in its quest to serve optimal data to ML users,
+                    and returns IDs of relevant data for your application.
                 </p>
-                <p class="text-muted mt-2">Watch the short video below on how Neural Data Server works. Also checkout a
-                    2 minute <a href="https://youtu.be/I308xDHVgU4" , target="_blank">demo video</a> on how to use our
+                <p class="text-muted mt-2">Watch the short video below on how Neural Data Server works. Also checkout
+                    our guide on how to use our
                     platform. For further technical information about NDS please see our <a href="paper.html"
                         target="_blank">paper</a>. </p>
                 <br>
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <a href="demo.html" target="_blank" class="btn btn-custom">Guide</a>
+                    </div>
+                </div>
                 <div class="mt-3 text-center">
                     <video width="80%" controls>
                         <source src="/static/images/DNSINTROFINALFINAL.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <br>
-                    <!-- <img src="/static/images/server-client.png" alt="" class="img-fluid mx-auto d-block"> -->
                 </div>
                 <br>
                 <p class="text-muted mt-2"><b>Disclaimer:</b></p>
@@ -338,7 +343,8 @@
                 source dataset cluster. Closer nodes imply higher relevancy to your dataset.
             </p>
         </div>
-        <p class="text-muted mt-2" style="font-size: 100%; text-align: justify;"><b> * Terms of Use: </b>NDS is a free service. By using NDS,
+        <p class="text-muted mt-2" style="font-size: 100%; text-align: justify;"><b> * Terms of Use: </b>NDS is a free
+            service. By using NDS,
             in addition to
             respecting
             the original dataset
@@ -376,7 +382,7 @@
                     <p class="text-muted mb-0"> Copyright &copy; University of Toronto 2019</p>
                     <ul class="list-unstyled list-inline mb-3">
                         <li class="list-inline-item"><a href="mailto:nds@cs.toronto.edu" , target="_blank"><i
-                                    class="mdi mdi-email text-muted"></i></a>
+                                    class="mdi mdi-email text-muted" style="font-size: 150%;"></i></a>
                         </li>
                         <!-- <li class="list-inline-item"><a href="#"><i class="mdi mdi-linkedin text-muted"></i></a>
                         </li> -->
