--- a/templates/paper.html
+++ b/templates/paper.html
@@ -12,7 +12,7 @@
 </div>
 
 <!-- Start Navbar -->
-<nav class="navbar navbar-expand-lg fixed-top custom-nav sticky">
+<nav class="navbar navbar-expand-lg fixed-top custom-nav sticky stickyadd2">
     <div class="container">
 
         <a class="navbar-brand pt-0 logo" href="index.html">
@@ -29,6 +29,15 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Search Engine</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="demo.html">Guide</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contribute.html">Contribute</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="paper.html">Paper and Team</a>
@@ -218,7 +227,7 @@
                     <p class="text-muted mb-0"> Copyright &copy; University of Toronto 2019</p>
                     <ul class="list-unstyled list-inline mb-3">
                         <li class="list-inline-item"><a href="mailto:nds@cs.toronto.edu" , target="_blank"><i
-                                    class="mdi mdi-email text-muted"></i></a>
+                                    class="mdi mdi-email text-muted" style="font-size: 150%;"></i></a>
                         </li>
                         <!-- <li class="list-inline-item"><a href="#"><i class="mdi mdi-linkedin text-muted"></i></a>
                         </li> -->
