--- a/templates/index.html
+++ b/templates/index.html
@@ -374,45 +374,24 @@
         <div class="row justify-content-center text-center">
             <div class="col-md-12">
                 <div class="text-center text-white footer-alt">
+                    <ul class="list-unstyled list-inline mb-3">
+                        <li class="list-inline-item"><a href="terms.html" , target="_blank"><i
+                                    class="mdi mdi-information-outline text-muted">License and Terms</i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="mailto:nds@cs.toronto.edu" , target="_blank"><i
+                                    class="mdi mdi-email text-muted">Contact Us</i></a>
+                        </li>
+                    </ul>
                     <div class="text-center col-lg-12">
                         <img src="/static/images/uoft.png" style="width: 15%;"></img>
                         <img src="/static/images/vector.png" style="width: 15%;"></img>
                     </div>
                     <br>
                     <p class="text-muted mb-0"> Copyright &copy; University of Toronto 2019</p>
-                    <ul class="list-unstyled list-inline mb-3">
-                        <li class="list-inline-item"><a href="mailto:nds@cs.toronto.edu" , target="_blank"><i
-                                    class="mdi mdi-email text-muted" style="font-size: 150%;"></i></a>
-                        </li>
-                        <!-- <li class="list-inline-item"><a href="#"><i class="mdi mdi-linkedin text-muted"></i></a>
-                        </li> -->
-                        <!-- <li class="list-inline-item"><a href="#"><i class="mdi mdi-pinterest text-muted"></i></a>
-                        </li>
-                        <li class="list-inline-item"><a href="#"><i class="mdi mdi-twitter text-muted"></i></a></li> -->
-                    </ul>
+                    <br>
                 </div>
             </div>
         </div>
 </section>
-<!-- <footer class="footer">
-    <div class="container">
-        <div class="row justify-content-center text-center">
-            <div class="col-md-12">
-                <div class="text-center text-white footer-alt">
-                    <ul class="list-unstyled list-inline mb-3">
-                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-facebook text-muted"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-linkedin text-muted"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-pinterest text-muted"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-twitter text-muted"></i></a></li>
-                        </ul>
-                    <p class="text-muted mb-0"> Copyright &copy; University of Toronto 2019</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer> -->
 <!--END FOOTER-->
 {% endblock %}
