--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -53,30 +53,28 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="text-center">
-                    <h2><span class="font-weight-bold">License and Terms</span></h2>
+                    <h2><span class="font-weight-bold">Privacy Policy</span></h2>
                 </div>
             </div>
             <div class="col-lg-12">
-                <h4 class="mt-4">Terms of Use</h4>
-                <p class="text-muted mt=2">NDS is a free service. By using NDS, in addition to respecting the original
-                    dataset licenses, you agree that the data suggested to you by NDS will not be used in offensive or
-                    non-ethical A.I. applications. Our dataset experts are neural networks trained on subsets of the
-                    datasets. Using the experts themselves for commercial applications is strictly forbidden. You are
-                    required to license the data from original dataset providers.</p>
-                <p class="text-muted mt=2">If you are using NDS for commercial applications and find NDS useful,
-                    please consider making a sponsorship by emailing <a href="mailto:nds@cs.toronto.edu" ,
-                        target="_blank">nds@cs.toronto.edu</a></p>
+                <p class="text-muted mt=2">Neural Data Server website recognizes that privacy of your information is
+                    important. Our platform does not have access to your data. We do not collect any personal
+                    information from you.</p>
             </div>
             <div class="col-lg-12">
-                <h4 class="mt-4">License Agreement</h4>
-                <p class="text-muted mt=2"><b>We do not host datasets.</b> In NDS we provide IDs to examples from
-                    existing
-                    datasets. Below each dataset we provide the license information. Please contact each dataset’s
-                    original provider for any questions/licensing.</p>
-                <p class="text-muted mt=2">Please respect the licenses from each dataset in our Dataset Registry. We
-                    make no warranties regarding the
-                    license status of images in
-                    each dataset and you should verify the license for each image yourself.</p>
+                <h4 class="mt-4">Links to Other Websites</h4>
+                <p class="text-muted mt=2">This Service may contain links to other sites. If you click on a third party
+                    link, you will be directed to that site. Note that these external sites are not operated by us.
+                    Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control
+                    over and assume no responsibility for the content, privacy policies, or practices of any third party
+                    sites or services.</p>
+            </div>
+            <div class="col-lg-12">
+                <h4 class="mt-4">Changes to This Privacy Policy</h4>
+                <p class="text-muted mt=2">We may update our Privacy Policy from time to time. Thus, you are advised to
+                    review this page periodically for any changes. We will notify you of any changes by posting the new
+                    Privacy Policy on this page. These changes are effective immediately after they are posted on this
+                    page.</p>
             </div>
         </div>
     </div>
