--- a/templates/paper.html
+++ b/templates/paper.html
@@ -215,29 +215,35 @@
 
 <!--START FOOTER-->
 <section class="section" id="footer">
-        <div class="container">
-            <div class="row justify-content-center text-center">
-                <div class="col-md-12">
-                    <div class="text-center text-white footer-alt">
-                        <ul class="list-unstyled list-inline mb-3">
-                            <li class="list-inline-item"><a href="terms.html" , target="_blank"><i
-                                        class="mdi mdi-information-outline text-muted">License and Terms</i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="mailto:nds@cs.toronto.edu" , target="_blank"><i
-                                        class="mdi mdi-email text-muted">Contact Us</i></a>
-                            </li>
-                        </ul>
-                        <div class="text-center col-lg-12">
-                            <img src="/static/images/uoft.png" style="width: 15%;"></img>
-                            <img src="/static/images/vector.png" style="width: 15%;"></img>
-                        </div>
-                        <br>
-                        <p class="text-muted mb-0"> Copyright &copy; University of Toronto 2019</p>
-                        <br>
+    <div class="container">
+        <div class="row justify-content-center text-center">
+            <div class="col-md-12">
+                <div class="text-center text-white footer-alt">
+                    <ul class="list-unstyled list-inline mb-3">
+                        <li class="list-inline-item"><a href="terms.html" , target="_blank"><i
+                                    class="mdi mdi-information-outline text-muted">License and Terms</i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="privacy.html" , target="_blank"><i
+                                    class="mdi mdi-information-outline text-muted">Privacy Policy</i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="mailto:nds@cs.toronto.edu" , target="_blank"><i
+                                    class="mdi mdi-email text-muted">Contact Us</i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="contribute.html" , target="_blank"><i
+                                    class="mdi mdi-git text-muted">Contribute</i></a>
+                        </li>
+                    </ul>
+                    <div class="text-center col-lg-12">
+                        <img src="/static/images/uoft.png" style="width: 15%;"></img>
+                        <img src="/static/images/vector.png" style="width: 15%;"></img>
                     </div>
+                    <br>
+                    <p class="text-muted mb-0"> Copyright &copy; University of Toronto 2019</p>
+                    <br>
                 </div>
             </div>
-    </section>
+        </div>
+</section>
 <!--END FOOTER-->
 
 {% endblock %}
