--- a/templates/contribute.html
+++ b/templates/contribute.html
@@ -87,9 +87,9 @@
                         <li class="list-inline-item"><a href="mailto:nds@cs.toronto.edu" , target="_blank"><i
                                     class="mdi mdi-email text-muted">Contact Us</i></a>
                         </li>
-                        <li class="list-inline-item"><a href="contribute.html" , target="_blank"><i
+                        <!-- <li class="list-inline-item"><a href="contribute.html" , target="_blank"><i
                                     class="mdi mdi-git text-muted">Contribute</i></a>
-                        </li>
+                        </li> -->
                     </ul>
                     <div class="text-center col-lg-12">
                         <img src="/static/images/uoft.png" style="width: 15%;"></img>
