--- a/templates/demo.html
+++ b/templates/demo.html
@@ -36,9 +36,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="demo.html">Guide</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="contribute.html">Contribute</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" href="paper.html">Paper and Team</a>
                 </li>
@@ -109,9 +109,9 @@
                         <li class="list-inline-item"><a href="mailto:nds@cs.toronto.edu" , target="_blank"><i
                                     class="mdi mdi-email text-muted">Contact Us</i></a>
                         </li>
-                        <!-- <li class="list-inline-item"><a href="contribute.html" , target="_blank"><i
+                        <li class="list-inline-item"><a href="contribute.html" , target="_blank"><i
                                     class="mdi mdi-git text-muted">Contribute</i></a>
-                        </li> -->
+                        </li>
                     </ul>
                     <div class="text-center col-lg-12">
                         <img src="/static/images/uoft.png" style="width: 15%;"></img>
