--- a/templates/terms.html
+++ b/templates/terms.html
@@ -36,9 +36,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="demo.html">Guide</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="contribute.html">Contribute</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" href="paper.html">Paper and Team</a>
                 </li>
