--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="#home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#dataset">Search Engine</a>
+                    <a class="nav-link" href="#search">Search Engine</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="demo.html">Guide</a>
@@ -65,8 +65,13 @@
                                 Data to Pre-Train Your Deep Neural
                                 Models
                             </p>
-                            <div class="mt-4 pt-2">
-                                <a class="btn btn-outline-custom btn-round" href="#abstract">Learn More</a>
+                            <div class="row justify-content-center">
+                                <div class="col col-md-4 mt-4 pt-2">
+                                    <a class="btn btn-outline-custom btn-round" href="#abstract">Learn More</a>
+                                </div>
+                                <div class="col col-md-4 mt-4 pt-2">
+                                    <a class="btn btn-outline-custom btn-round" href="#search">Go to Search</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -98,7 +103,7 @@
                     application. Neural Data Server
                     indexes several popular Machine Learning datasets in its quest to serve optimal data to ML users.
                 </p> -->
-                <p class="text-muted mt-2" style="text-align: justify;">Neural Data Server is a search engine that
+                <!-- <p class="text-muted mt-2" style="text-align: justify;">Neural Data Server is a search engine that
                     uses A.I. to find the best data to pre-train your deep neural models for your target application.
                     Neural Data Server
                     indexes several popular Machine Learning datasets in its quest to serve optimal data to ML users,
@@ -110,6 +115,32 @@
                     IDs of the most relevant data subset for your application. Check out our <a href="demo.html"
                         target="_blank">Guide</a> for a
                     instruction demo on how to use our platform.
+                </p> -->
+                <p class="text-muted mt-2" style="text-align: justify;">Neural Data Server is a search engine that
+                    uses A.I. to find the best data to pre-train your deep neural models for your target application.
+                    Neural Data Server
+                    indexes several popular Machine Learning datasets in its quest to serve optimal data to ML users,
+                    and returns IDs of relevant data for your application. In order to do "search", we provide a set of
+                    pre-trained models and tools to adapt to your target dataset and generate a file containing
+                    information to select the most relevant data over indexed datasets in our Dataset Registry. We are
+                    able to search over data in our Data Registry, which contains large-scale object detection,
+                    segmentation datasets, you can <a href="contribute.html" target="_blank">Contact Us</a>
+                    if you wish to contribute your own data to our Dataset Registry.
+                </p>
+                <p class="text-muted mt-2" style="font-size: 80%; text-align: justify;"><b>*We do not host datasets.
+                    </b>In NDS we provide IDs to examples from
+                    existing datasets. Below each
+                    dataset we provide the license information. Please contact each dataset’s original provider for any
+                    questions/licensing.</p>
+                <p class="text-muted mt-2" style="text-align: justify;">
+                    To use our platform: (1) First, use our <a href="#fast-adapt">script</a> to adapt to your dataset
+                    and generate
+                    a transfer.pickle file for
+                    communicating to our server (2) Next, <a href="#download-subset">upload</a> the transfer.pickle
+                    file, and click download to obtain a JSON file containing the
+                    IDs of the most relevant data subset for your application. Check out our <a href="demo.html"
+                        target="_blank">Guide</a> for an
+                    instruction demo on how to use our platform.
                 </p>
                 <p class="text-muted mt-2">Watch the short video below on how Neural Data Server works. For further
                     technical information about NDS please see our <a href="paper.html" target="_blank">paper</a>. </p>
@@ -120,18 +151,12 @@
                     </div>
                 </div>
                 <div class="mt-3 text-center">
-                    <video width="40%" controls>
+                    <video width="400" controls>
                         <source src="/static/images/DNSINTROFINALFINAL.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <br>
                 </div>
-                <br>
-                <p class="text-muted mt-2"><b>Disclaimer:</b></p>
-                <p class="text-muted mt-2"><b>We do not host datasets. </b>In NDS we provide IDs to examples from
-                    existing datasets. Below each
-                    dataset we provide the license information. Please contact each dataset’s original provider for any
-                    questions/licensing.</p>
             </div>
         </div>
     </div>
@@ -139,14 +164,18 @@
 <!-- END ABOUT -->
 
 <!--START DATASET -->
-<section class="section text-center bg-light" id="dataset">
+<section class="section text-center bg-light" id="search">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-12">
                 <div class="text-center">
                     <h2>1. NDS <span class="font-weight-bold">Dataset Registry</span></h2>
-                    <p class="text-muted mx-auto section-subtitle mt-3">Check out our datasets we current support. You
-                        can optionally hover and download experts for adapting locally.</p>
+                    <p class="text-muted mx-auto section-subtitle mt-3">Check out the datasets we current support below.
+                    </p>
+                    <p class="text-muted mx-auto section-subtitle mt-3">If you wish to adapt to your dataset via our
+                        Local Option (see 2), hover over the datasets you
+                        wish to search over and click Download Expert to obtain pre-trained models for your local
+                        machine. </p>
                 </div>
             </div>
         </div>
@@ -375,20 +404,27 @@
         <div class="row justify-content-center text-center">
             <div class="col-md-12">
                 <div class="text-center text-white footer-alt">
-                    <ul class="list-unstyled list-inline mb-3">
-                        <li class="list-inline-item"><a href="terms.html" , target="_blank"><i
-                                    class="mdi mdi-information-outline text-muted">License and Terms</i></a>
-                        </li>
-                        <li class="list-inline-item"><a href="privacy.html" , target="_blank"><i
+                    <div class="row">
+                        <div class="col col-lg-3">
+                            <a href="terms.html" , target="_blank"><i
+                                    class="mdi mdi-information-outline text-muted">License
+                                    and Terms</i></a>
+                        </div>
+                        <div class="col col-lg-3">
+                            <a href="privacy.html" , target="_blank"><i
                                     class="mdi mdi-information-outline text-muted">Privacy Policy</i></a>
-                        </li>
-                        <li class="list-inline-item"><a href="mailto:nds@cs.toronto.edu" , target="_blank"><i
+                        </div>
+                        <div class="col col-lg-3">
+                            <a href="mailto:nds@cs.toronto.edu" , target="_blank"><i
                                     class="mdi mdi-email text-muted">Contact Us</i></a>
-                        </li>
-                        <li class="list-inline-item"><a href="contribute.html" , target="_blank"><i
+                        </div>
+                        <div class="col col-lg-3">
+                            <a href="contribute.html" , target="_blank"><i
                                     class="mdi mdi-git text-muted">Contribute</i></a>
-                        </li>
-                    </ul>
+                        </div>
+                    </div>
+                    <br>
+                    <br>
                     <div class="text-center col-lg-12">
                         <img src="/static/images/uoft.png" style="width: 15%;"></img>
                         <img src="/static/images/vector.png" style="width: 15%;"></img>
