--- a/templates/terms.html
+++ b/templates/terms.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Search Engine</a>
+                    <a class="nav-link" href="index.html#search">Search Engine</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="demo.html">Guide</a>
